Return failure on non-acquiration of handle

--- a/mac-cel.1
+++ b/mac-cel.1
@@ -10,6 +10,9 @@ is a simple program to remove mouse acceleration on Mac OSX.
 Successful operation.
 .TP
 .B 1
+Failed to set HID parameters.
+.TP
+.B 2
 Failed to acquire handle.
 .SH BUGS
 Please report any bugs to https://github.com/cdown/mac-cel/issues.
