Update manual to note -t

--- a/mac-cel.1
+++ b/mac-cel.1
@@ -1,9 +1,16 @@
 .TH MAC-CEL 1
 .SH NAME
 mac-cel \- remove mouse acceleration
+.SH SYNOPSIS
+.RB [ " -t
+]
 .SH DESCRIPTION
 .B mac-cel
 is a simple program to remove mouse acceleration on Mac OSX.
+.SH OPTIONS
+.TP
+.B -t
+Disable trackpad acceleration.
 .SH "EXIT STATUS"
 .TP
 .B 0
