Allow version query with -v

--- a/mac-cel.1
+++ b/mac-cel.1
@@ -4,6 +4,8 @@ mac-cel \- remove mouse acceleration
 .SH SYNOPSIS
 .RB [ " -t"
 ]
+.RB [ " -v"
+]
 .SH DESCRIPTION
 .B mac-cel
 is a simple program to remove mouse acceleration on Mac OSX.
@@ -11,6 +13,9 @@ is a simple program to remove mouse acceleration on Mac OSX.
 .TP
 .B -t
 Disable trackpad acceleration.
+.TP
+.B -v
+Print version information.
 .SH "EXIT STATUS"
 .TP
 .B 0
